--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-    "name": "notes-app-back-end",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start-prod": "NODE_ENV=production node ./src/server.js",
-        "start": "nodemon ./src/server.js",
-        "lint": "eslint ./src"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@eslint/js": "^9.1.1",
-        "eslint": "^9.1.1",
-        "globals": "^15.1.0",
-        "nodemon": "^3.1.0"
-    },
-    "dependencies": {
-        "@hapi/hapi": "^21.3.9",
-        "nanoid": "^3.3.7"
-    }
+  "name": "notes-app-back-end",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start:prod": "NODE_ENV=production node ./src/server.js",
+    "start:dev": "nodemon ./src/server.js",
+    "lint": "eslint ./src"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.52.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^21.3.2",
+    "nanoid": "^3.1.20"
+  }
 }
